2013-12-11  Corinna Vinschen  <corinna@vinschen.de>

	* mount.cc (fs_info::update): Fix formatting.

2013-12-10  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (fhandler_dev_clipboard): Add private member
	cygnativeformat.  Declare private method set_clipboard.
	* fhandler_clipboard.cc (cygnativeformat): Convert static variable to
	fhandler_dev_clipboard member.
	(fhandler_dev_clipboard::set_clipboard): Convert from static function
	to fhandler_dev_clipboard method.

2013-12-09  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* globals.cc (hntdll): Define/declare.
	* exceptions.cc (inside_kernel): Don't call GetModuleFileName if we
	know we're in ntdll.
	* sigproc.cc (wait_sig): Initialize hntdll.

2013-12-09  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/stdlib.h (initstate, random, setstate, srandom):
	Harden _XOPEN_SOURCE guard against applications defining _XOPEN_SOURCE
	with empty value.

2013-12-08  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 28.

2013-12-07  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_native): Workaround Windows 8.1 bug: Drop long path
	prefix from symlink target path.  Add comment to explain why.

2013-12-06  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* syscalls.cc (dup): Use cygheap_fdnew properly.

2013-12-05  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* cygheap.h (cygheap_fdnew): Avoid setting errno directly since it will
	have been set by a previous function.
	* dtable.h (dtable::extend): Accept second size_t argument.
	* dtable.cc (dtable::extend): Accept second "min" argument which allows
	checking for OPEN_MAX_MAX boundary conditions.
	(dtable_init): Accommodate second argument to dtable::extend.
	(dtable::find_unused_handle): Ditto.
	* syscalls.cc (setdtablesize): Ditto.
	(dup): Return any error passed by cygheap_fdnew() directly.
	(getdtablesize): Just return dtable size directly.
